--- a/configs/pix2pix_lensflare.yaml
+++ b/configs/pix2pix_lensflare.yaml
@@ -1,6 +1,5 @@
 # general settings
 modelname: pix2pix_v1
-gpu_ids: 0
 
 # datasets
 datasets:
@@ -35,7 +34,8 @@ datasets:
 # network settings
 networks:
   which_model: pix2pix_v1
-  patch_size: 64
+  gpu_ids: 0
+
 
 # path to save trained model
 paths:
@@ -44,8 +44,9 @@ paths:
 
 # optimizer
 trainer:
-  lr: !!float 1e-2
-  loss: mae
+  lr: !!float 2e-4
+  beta1: 0.5
+  beta2: 0.999
   epochs: 300
   workers: 0
   val_step: 1
