--- a/environments/dockerfile
+++ b/environments/dockerfile
@@ -10,17 +10,7 @@ EXPOSE 22
 ENV LANG en_US.UTF-8
 ENV LC_ALL en_US.UTF-8
 
-RUN pip3 install \
-numpy \
-pillow \
-scipy \
-scikit-image \
-matplotlib \
-pandas \
-opencv-python \
-ipython \ 
-pyyaml \ 
-tensorboardX \ 
+RUN pip3 install numpy pillow scipy scikit-image matplotlib pandas opencv-python ipython pyyaml tensorboardX
 
 # setup openssh
 RUN apt-get update
