--- a/configs/pix2pix_lensflare.yaml
+++ b/configs/pix2pix_lensflare.yaml
@@ -1,29 +1,30 @@
 # general settings
 modelname: pix2pix_v1
+mode: train # train, test
+vis_type: wandb # tensorboard, wandb, None
+log_interval_step: 1
 
 # datasets
 datasets:
   train:
-    train_input_img: /home/datasets/LensflareRemovalDataset/train_input_img/
-    train_label_img: /home/datasets/LensflareRemovalDataset/train_label_img/
-    train_input_pt: /home/datasets/LensflareRemovalDataset/train_input_img_pt/
-    train_label_pt: /home/datasets/LensflareRemovalDataset/train_label_img_pt/
+    train_input_img: /home/datasets/LensflareRemovalDataset/train_input_img_debug/
+    train_label_img: /home/datasets/LensflareRemovalDataset/train_label_img_debug/
     train_csv: /home/datasets/LensflareRemovalDataset/train_splited.csv
-    batch_size: 64
+    batch_size: 128
     patch_size: 256
     stride: 128
-    direction: a2b # input:a, label:b
     mean: [0.206, 0.218, 0.196]
     std: [0.232, 0.239, 0.231]
+    flip: True
+    rot: False
     split: train
-    flip: true
-    rot: true
   val:
-    val_path: /home/datasets/LensflareRemovalDataset/
-    val_csv: /home/datasets/LensflareRemovalDataset/val_splited.csv
+    val_input_img: /home/datasets/LensflareRemovalDataset/val_input_img/
+    val_label_img: /home/datasets/LensflareRemovalDataset/val_label_img/
     mean: [0.206, 0.218, 0.196]
     std: [0.232, 0.239, 0.231]
     batch_size: 64
+    save_img: True
   test:
     test_path: /home/datasets/LensflareRemovalDataset/test_input_img
     test_csv: /home/datasets/LensflareRemovalDataset/test.csv
@@ -34,8 +35,7 @@ datasets:
 # network settings
 networks:
   which_model: pix2pix_v1
-  gpu_ids: 0
-
+  gpu_ids: 6
 
 # path to save trained model
 paths:
@@ -47,7 +47,7 @@ trainer:
   lr: !!float 2e-4
   beta1: 0.5
   beta2: 0.999
-  epochs: 300
+  epochs: 100
   workers: 0
   val_step: 1
   resume: False
