add infer routine

--- a/configs/pix2pix_lensflare.yaml
+++ b/configs/pix2pix_lensflare.yaml
@@ -2,7 +2,7 @@
 modelname: pix2pix_v1
 mode: train # train, test
 vis_type: wandb # tensorboard, wandb, None
-log_interval_step: 10
+log_interval_step: 100
 
 # datasets
 datasets:
@@ -10,7 +10,7 @@ datasets:
     train_input_img: /home/datasets/LensflareRemovalDataset/train_input_img/
     train_label_img: /home/datasets/LensflareRemovalDataset/train_label_img/
     train_csv: /home/datasets/LensflareRemovalDataset/train_splited.csv
-    batch_size: 340
+    batch_size: 340 #340
     patch_size: 256
     stride: 128
     mean: [0.206, 0.218, 0.196]
@@ -23,15 +23,17 @@ datasets:
     val_label_img: /home/datasets/LensflareRemovalDataset/val_label_img/
     mean: [0.206, 0.218, 0.196]
     std: [0.232, 0.239, 0.231]
-    batch_size: 64
-    save_img: True
-    save_duration: 10
+    batch_size: 64 #64
+    patch_size: 256
+    stride: 128
+    logging_duration: 10 #10
   test:
-    test_path: /home/datasets/LensflareRemovalDataset/test_input_img
-    test_csv: /home/datasets/LensflareRemovalDataset/test.csv
+    test_input_img: /home/datasets/LensflareRemovalDataset/test_input_img/
     mean: [0.214, 0.225, 0.204]
     std: [0.208, 0.216, 0.210]
     batch_size: 64
+    patch_size: 256
+    stride: 128    
 
 # network settings
 networks:
@@ -50,6 +52,6 @@ trainer:
   beta2: 0.999
   epochs: 100
   workers: 0
-  val_step: 1
+  val_step: 5
   resume: False
   resume_path: ~
